--- a/style.css
+++ b/style.css
@@ -161,3 +161,69 @@ box-shadow: 0px 3px 27px 0px rgba(0, 255, 136, 0.5);
      background:transparent;
      border:1px solid #00FF88;
 }
+.about                                      /*about section*/
+{
+    height:100%;
+    width:100%;
+    background-color:#1A0B2E ;
+    color:rgb(255, 255, 255);
+    padding:100px 50px 120px 50px;
+    
+     display:flex;
+     justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+  
+}
+#about_heading
+{
+    font-family:inter;
+    font-size: 40px;
+    margin-bottom: 20px;
+}
+.para
+{
+    font-family: inter;
+    font-weight: 200;
+    font-size:15px;
+    color: rgba(240, 248, 255, 0.7);
+   
+  
+}
+.para1
+{
+    margin-top:20px;
+    margin-bottom:50px;
+}
+hr{
+    width:100%;
+    border: none;
+    background-color:rgba(255, 255, 255, 0.797);
+    height:0.5px;
+}
+.boxes
+{
+    margin: 50px  ;
+    
+     display:flex;
+     justify-content: space-around;
+    align-items: center;
+    flex-direction: row;
+    gap:70px;
+    line-height:1;
+}
+.box{
+    font-family: inter;
+    font-size: 50px;
+    font-weight: 900;
+    color: #00FF88;
+  
+
+}
+.text{
+    font-weight: 200;
+    font-size: 15px;
+    color:white;
+}
+
