--- a/style.css
+++ b/style.css
@@ -37,14 +37,19 @@ nav {
   -webkit-text-fill-color: transparent;
 }
 
-.link                                                                              /*menu items*/ {
+.link                                                                           /*menu items*/ {
   display: flex;
   justify-content: center;
   list-style-type: none;
   gap: 30px;
   list-style: none;
   align-items: center;
-  margin-right: 120px;
+  margin-right: 230px;
+}
+.menu{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .link1 {
   color: white;
@@ -581,20 +586,14 @@ hr {
   }
 
   .link {
-    position: fixed;
-    top: 0;
-    right: -100%;
-    width: 70%;
-    height: 100vh;
-    background-color: #1a0b2f;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    transition: right 0.4s ease;
-    box-shadow: -5px 0 15px rgba(0, 0, 0, 0.5);
-    z-index: 1000;
-    padding-top: 60px;
-  }
+  
+  display: flex;
+  flex-direction: column; /* Stacks the list items vertically */
+  align-items: center;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
 
   .link li {
     margin: 1.5rem 0;
@@ -604,7 +603,30 @@ hr {
     font-size: 1.2rem;
   }
 
-  #menu-toggle:checked ~ .link {
+  #menu-toggle:checked ~ .menu{
     left: 180px;
   }
+  .menu
+  {
+  
+
+    position: fixed;
+  top: 0;
+  right: -100%; 
+  width: 70%;
+  height: 100vh;
+  background-color: #1a0b2f;
+  
+  
+  display: flex;
+  flex-direction: column; 
+  justify-content: center;
+  align-items: center;
+  gap: 30px; 
+  
+  transition: right 0.4s ease;
+  z-index: 1000;
+  }
+ 
 }
+
