--- a/style.css
+++ b/style.css
@@ -44,13 +44,9 @@ nav {
   gap: 30px;
   list-style: none;
   align-items: center;
-  margin-right: 230px;
+
 }
-.menu{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+
 .link1 {
   color: white;
   text-decoration: none;
@@ -62,12 +58,12 @@ nav {
   display: none;
 }
 .hamburger {
-  display: none; /* Hidden by default on desktop */
+  display: none; 
   cursor: pointer;
-  z-index: 1001; /* Ensure it's on top of the menu */
+  z-index: 1001; 
 }
 .hamburger img {
-  width: 30px; /* Adjust size as needed */
+  width: 30px;
   height: auto;
   display: block;
 }
@@ -581,52 +577,141 @@ hr {
 
     z-index: 15;
   }
-  .hamburger {
+  .hamburger {                                        /*humburger menu part*/
     display: block;
+     z-index: 1002;
+      position: relative;
+
+  }
+ .link,
+  .button1 {
+    display: none;
   }
 
-  .link {
-  
-  display: flex;
-  flex-direction: column; /* Stacks the list items vertically */
-  align-items: center;
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
+
+
+ #menu-toggle:checked ~ .link {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #1a0b2e;
+    z-index: 1000;
+    margin: 0;
+    padding: 0;
+  }
+   #menu-toggle:checked ~ .button1 {
+    display: flex;
+    position: fixed;
+    z-index: 1001;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 15%; /* Position it in the lower part of the screen */
+  }
+
 
   .link li {
-    margin: 1.5rem 0;
+    margin:0;
   }
 
   .link li a {
-    font-size: 1.2rem;
+    font-size: 1.5rem;
   }
 
-  #menu-toggle:checked ~ .menu{
-    left: 180px;
-  }
-  .menu
-  {
-  
-
-    position: fixed;
-  top: 0;
-  right: -100%; 
-  width: 70%;
-  height: 100vh;
-  background-color: #1a0b2f;
-  
-  
-  display: flex;
-  flex-direction: column; 
-  justify-content: center;
-  align-items: center;
-  gap: 30px; 
-  
-  transition: right 0.4s ease;
-  z-index: 1000;
-  }
+ 
  
 }
 
+@media (min-width:576px) and (max-width:992px)         /*576px to 992 px */
+{
+
+.hamburger {                                        /*humburger menu part*/
+    display: block;
+     z-index: 1002;
+      position: relative;
+
+  }
+ .link,
+  .button1 {
+    display: none;
+  }
+
+
+
+ #menu-toggle:checked ~ .link {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+  height: 100%;
+    background-color: #1a0b2e;
+    z-index: 1000;
+    margin: 0;
+    padding: 0;
+  }
+   #menu-toggle:checked ~ .button1 {
+    display: flex;
+    position: fixed;
+    z-index: 1001;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 15%; 
+  }
+
+
+  .link li {
+    margin:0;
+  }
+
+  .link li a {
+    font-size: 1.5rem;
+  }
+
+ .boxes {
+    flex-wrap: wrap;
+    margin: 20px;
+  }
+
+ .grid {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+.video_section {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+ .hostcard {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+
+.media {
+    justify-content: center;
+  }
+  .hostname {
+    display: flex;
+    justify-content: center;
+  }
+
+
+
+
+
+
+
+
+}
